# dashboard

./: .gitignore  CMakeLists.txt  Main.qml  README.md  canreceiver.cpp  canreceiver.h  carcontroller.cpp  carcontroller.h  main.cpp
esp/esp_code1/: Blink.txt  esp_code1.ino
esp/esp_code1/data/: can_map.json
